--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -31,11 +31,11 @@
           <option value="{{member.name}}"></option>
           {% endfor %}
         </datalist>
-        <select name="use" id="" class="inputModules">
+        <select name="use" id="filterUse" class="inputModules">
             <option {% if use == '사용' %} selected {% endif %} value="사용">사용</option>
             <option {% if use == '미사용' %} selected {% endif %} value="미사용">미사용</option>
         </select>
-        <select name="age" id="" class="inputModules">
+        <select name="age" id="filterAge" class="inputModules">
             <option {% if age == '나이 전체' %} selected {% endif %} value="나이 전체">나이 전체</option>
             <option {% if age == '65세 이상' %} selected {% endif %} value="65세 이상">65세 이상</option>
         </select>
@@ -174,12 +174,12 @@
                       <label for="" class="popupArticleLabel"><span class="importantStar">*</span>담당업무</label>
                       <select name="role" id="role" class="popupArticleinput PopupDataInputWork">
                         <option value="">담당업무 선택</option>
+                        <option value="임시">임시</option>
                         <option value="용역">용역</option>
                         <option value="운전원">운전원</option>
                         <option value="팀장">팀장</option>
-                        <option value="배차관리자">배차관리자</option>
-                        <option value="경리관리자">경리관리자</option>
-                        <option value="마스터">마스터</option>
+                        <option value="관리자">관리자</option>
+                        <option value="최고관리자">최고관리자</option>
                       </select>
                   </div>
               </div>
@@ -265,8 +265,8 @@
                       </div>
                   </div>
               </div>
-              <div class="popupArticleCategori">계정정보</div>
-              <div class="popupArticleBox">
+              <div class="popupArticleCategori authorityDivision">계정정보</div>
+              <div class="popupArticleBox authorityDivision">
                   <div class="popupArticleDouble">
                       <label for="" class="popupArticleLabel">아이디</label>
                       <div class="popupIdBox">
@@ -311,12 +311,12 @@
                         <label for="" class="popupArticleLabel"><span class="importantStar">*</span>담당업무</label>
                         <select name="role" id="editRole" class="popupArticleinput hrRole">
                           <option value="">담당업무 선택</option>
+                          <option value="임시">임시</option>
                           <option value="용역">용역</option>
                           <option value="운전원">운전원</option>
                           <option value="팀장">팀장</option>
-                          <option value="배차관리자">배차관리자</option>
-                          <option value="경리관리자">경리관리자</option>
-                          <option value="마스터">마스터</option>
+                          <option value="관리자">관리자</option>
+                          <option value="최고관리자">최고관리자</option>
                         </select>
                     </div>
                 </div>
@@ -402,8 +402,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="popupArticleCategori">계정정보</div>
-                <div class="popupArticleBox">
+                <div class="popupArticleCategori authorityDivision">계정정보</div>
+                <div class="popupArticleBox authorityDivision">
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">아이디</label>
                         <div class="popupIdBox">
@@ -455,4 +455,5 @@
 <script src="{% static 'js/hr/hr_list_popup.js' %}"></script>
 <script src="{% static 'js/hr/ageCalculator.js' %}"></script>
 <script src="{% static 'js/hr/essential.js' %}"></script>
+<script src="{% static 'js/hr/temporary.js' %}"></script>
 {% endblock %}
