--- a/static/css/crudmember/client.css
+++ b/static/css/crudmember/client.css
@@ -41,33 +41,41 @@
 }
 
 .clientTableForm td:nth-child(3) {
-    width: 8%;
+    width: 10%;
 }
 
-.clientTableForm td:nth-child(4),
-.clientTableForm td:nth-child(6) {
+.clientTableForm td:nth-child(4){
     width: 5%;
+}
+.clientTableForm td:nth-child(6) {
+    width: 7%;
 }
 
 .clientTableForm td:nth-child(5),
 .clientTableForm td:nth-child(7) {
-    width: 8%;
+    width: 7%;
 }
 
 .clientTableForm td:nth-child(8) {
-    width: 14%;
+    width: 12%;
 }
 
 .clientTableForm td:nth-child(9) {
-    width: 20%;
+    width: 26%;
 }
 
 .clientTableForm td:nth-child(10) {
-    width: 22%;
+    width: 16%;
 }
 
 .client{
     color: #0069D9;
+}
+
+.scrolling_table-list_body td:nth-child(9) {
+    text-align: left;
+    padding-left: 1rem;
+    box-sizing: border-box;
 }
 
 
