공지, 인사관리, 배차 권한 구분 완 +, 자잘한 수정

--- a/accounting/templates/accounting/collect.html
+++ b/accounting/templates/accounting/collect.html
@@ -158,7 +158,7 @@
         <div class="popupBody">
             <div class="popupSection">
                 <div class="popupSearch">
-                    <label for="">입금인 : </label>
+                    <label for="">입금일 : </label>
                     <input autocomplete="off" type="date" class="inputModules">~
                     <input autocomplete="off" type="date" class="inputModules">
                     <label for="" class="reservationLabel">입금자명 : </label>
