--- a/dispatch/templates/dispatch/schedule.html
+++ b/dispatch/templates/dispatch/schedule.html
@@ -76,7 +76,7 @@
         <div class="scheduleTableCell">
             <div class="table">
                 <div class="tbody">
-                    {% for vehicle in vehicle_list %}
+                    
                     <div class="tr">
                         <div class="td"></div>
                         <div class="td"></div>
@@ -103,11 +103,11 @@
                         <div class="td"></div>
                         <div class="td"></div>
                         <div class="tdDriver">
-                            <span class="{{forloop.counter0}}">{{vehicle.vehicle_num}}</span>
-                            <span>({{vehicle.driver_name}})</span>
+                            <!-- <span class="{{forloop.counter0}}">{{vehicle.vehicle_num}}</span>
+                            <span>({{vehicle.driver_name}})</span> -->
                         </div>
                     </div>
-                    {% endfor %}
+                    
                 </div>
         </div>
     </div>
