--- a/humanresource/templates/HR/salary_list.html
+++ b/humanresource/templates/HR/salary_list.html
@@ -299,6 +299,7 @@
     
     {% endautoescape %}
 </script>
+<script src="{% static 'js/hr/authority.js' %}"></script>
 <script src="{% static 'js/hr/addSalary.js' %}"></script>
 <script src="{% static 'js/hr/deduction.js' %}"></script>
 <script src="{% static 'js/hr/textValidation.js' %}"></script>
