--- a/static/css/humanresource/salary.css
+++ b/static/css/humanresource/salary.css
@@ -74,6 +74,8 @@
     padding-right: 0.6rem;
     box-sizing: border-box;
     outline: none;
+    font-family: "Noto Sans CJK KR";
+    color: black;
 }
 
 .salaryContainer tbody td:nth-child(9),
