출퇴근 배차 DispatchRegularlyData 생성, 관련된 부분 수정 해야됨

--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -347,7 +347,7 @@
                             </select>
                         </td>
                         <td class="tdTypeA">참조사항</td>
-                        <td colspan="3" class="tdTypeB"><input autocomplete="off" value="{{detail.references}}" name="references" type="text" class="inputText length100" tabindex="22">
+                        <td colspan="3" class="tdTypeB"><input autocomplete="off" value="{{detail.references}}" name="references" type="text" class="inputText length100 loadNote" tabindex="22">
                         </td>
                     </tr>
                 </table>
@@ -724,6 +724,7 @@
                                 <td class="table-list_head-tr_td">선택</td>
                                 <td class="table-list_head-tr_td">거래처명</td>
                                 <td class="table-list_head-tr_td">대표번호</td>
+                                <td class="table-list_head-tr_td">비고</td>
                                 </tr>
                             </thead>
                             </table>
