--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -185,7 +185,7 @@
   <div class="mainLayout">
 
     <div class="toolbar">
-      <span class="toolbarTitle">날짜검색</span>
+      <input type="text" placeholder="노선명" name="search" class="">
       <input autocomplete="off" type="date" name="date" class="searchDate" max="9999-12-31">
       <div class="dateControllBtnBox">
         <div class="dateToday">오늘</div>
