--- a/static/css/base.css
+++ b/static/css/base.css
@@ -684,6 +684,7 @@ html::-webkit-scrollbar-track {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 1000;
   display: none;
   width: 100%;
   height: 100%;
