--- a/static/css/dispatch/regularlyRoute.css
+++ b/static/css/dispatch/regularlyRoute.css
@@ -51,7 +51,7 @@
   color: white;
 }
 
-.groupLock{
+.groupLock {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -64,7 +64,7 @@
   cursor: pointer;
 }
 
-.lockOpen{
+.lockOpen {
   display: none;
 }
 
@@ -213,7 +213,7 @@
   width: 100%;
 }
 
-.groupCalculateinput{
+.groupCalculateinput {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -222,15 +222,15 @@
   font-size: 1.4rem;
 }
 
-.groupCalculateinput span:nth-child(1){
+.groupCalculateinput span:nth-child(1) {
   margin-right: 2rem;
 }
 
-.tilde{
+.tilde {
   margin: 0 0.4rem;
 }
 
-.groupCalculateinput input{
+.groupCalculateinput input {
   width: 3rem;
   height: 100%;
   border: 0.1rem solid #CDCDCE;
@@ -239,7 +239,8 @@
   outline: none;
   box-sizing: border-box;
 }
-.groupCalculateinput div{
+
+.groupCalculateinput div {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -399,14 +400,6 @@
   font-size: 1.4rem;
 }
 
-#workStart {
-  margin-left: 2rem;
-}
-
-#workEnd {
-  margin-left: 1.6rem;
-}
-
 .routeWeek {
   align-items: center;
   width: 100%;
@@ -431,6 +424,14 @@
   width: calc(100% - 1.6rem);
   height: 2.4rem;
   margin: 0 0.8rem;
+}
+
+.tdTypeC input[type=radio]{
+  margin-left: 2rem;
+}
+
+.tdTypeC label{
+  cursor: pointer;
 }
 
 
@@ -490,6 +491,15 @@
   background-color: #444;
 }
 
+select[name=use]{
+  width: 10rem;
+  height: 2.4rem;
+  padding-left: 0.3rem;
+  border: 0.1rem solid #B5B5B5;
+  border-radius: 0.2rem;
+  font-size: 1.5rem;
+  box-sizing: border-box;
+}
 
 
 
@@ -679,6 +689,53 @@
   font-size: 1.6rem;
 }
 
-.visibleLoading span{
+.visibleLoading span {
   margin-right: 0.6rem;
+}
+
+
+
+
+/* 기준날짜 선택 */
+.pricePopupArea {
+  text-align: right;
+  width: calc(100% - 2.4rem);
+  height: 2.2rem;
+  margin: 0 0.8rem;
+  padding: 0 0.6rem;
+  border: 0.1rem solid black;
+  box-sizing: border-box;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  background-color: #CDCDCE;
+}
+
+.referenceeContainer {
+  width: 36rem;
+}
+
+.referenceDateInput {
+  width: 20rem
+}
+
+.fixedDate {
+  text-align: center;
+  font-size: 1.4rem;
+  width: 6rem;
+  height: 2.2rem;
+  margin: 0 0.8rem;
+  padding: 0 0.6rem;
+  border: 0.1rem solid black;
+  box-sizing: border-box;
+  border-radius: 0.2rem;
+  background-color: #CDCDCE;
+}
+
+.referenceEditBtn {
+  background-color: #0069D9;
+  margin-right: 1rem;
+}
+
+.referenceCloseBtn {
+  background-color: #444;
 }
