DispatchRegularlyData 처리부분 수정 완료 (static)

--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -468,7 +468,7 @@
 
           </div>
           <div class="popupFooter">
-            <input autocomplete="off" type="submit" class="btnModules loadHistory" value="배차">
+            <div class="btnModules loadHistory">배차</div>
             <div class="btnModules popupCloseBtn">닫기</div>
           </div>
         </div>
